--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
 .information {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
     background-color: rgba(118, 83, 57, 1);
     color: white;
     width: 80%;
-    text-align: center;
+    text-align: left;
+    padding: 10px;
     
 }
